# pm_as_ofi

./: .env.example  .env.test  .gitignore  API_RATE_LIMITS.md  BOOK_API_TEST.md  Cargo.toml  DOCS_GUIDE.md  EXTREME_PRICE_TEST.md  PRODUCTION_READY.md  README.md  STRATEGY_GUIDE.md  backtest_completion_first.py  backtest_pair_arb.py  backtest_pair_gated_tranche.py  fix.py  latest_live_log.txt  start_markets.sh  stop_markets.sh  test_ceiling  test_ceiling.rs  test_ceiling2  test_ceiling2.rs  test_gamma.sh  test_inventory  test_inventory.rs  test_limit  test_limit.rs  test_limit2  test_limit2.rs  test_limit3  test_limit3.rs  test_limit4  test_limit4.rs  test_limit5  test_limit5.rs  test_ofi  test_ofi.rs  test_pricing  test_pricing.rs  test_pricing2  (+4 more)
.claude/: settings.local.json
configs/: xuan_completion_gate_defaults.json  xuan_research_contract.json  xuan_taker_buy_pair_quality_l1_097_shadow.json
docs/: ADDING_STRATEGY_ZH.md  API_RATE_LIMITS.md  BUGFIX_REPORT.md  CONFIG_REFERENCE_ZH.md  DOCS_GUIDE.md  EXTREME_PRICE_TEST.md  GAMMA_TEST.md  GO_LIVE_5M_CHECKLIST_ZH.md  GO_LIVE_PAIR_ARB_CHECKLIST_ZH.md  LOCAL_AGG_EXTERNAL_TAPE_BACKFILL_PLAN_ZH.md  LOCAL_PRICE_AGG_CONVERGENCE_PLAN_ZH.md  OPERATIONAL_GUIDE.md  ORACLE_LAG_SNIPING_LIVE_CHECKLIST_ZH.md  PLAN_ANTI_Claude.md  PLAN_ANTI_GEM.md  PLAN_ANTI_temp.md  PLAN_Claude.md  PLAN_Claude_temp.md  PLAN_Codex.md  PLAN_PAIR_ARB_V3_1_ZH.md  PLAN_PAIR_ARB_V3_2_ZH.md  PLAN_PAIR_ARB_V3_3_ZH.md  PLAN_PAIR_ARB_V3_5_ZH.md  PLAN_PAIR_ARB_V3_ZH.md  POLYMARKET_CLOB_V2_UPGRADE_PLAN_2026-04-28_ZH.md  PRICE_PRECISION.md  README.md  SHARED_INGRESS_MULTIPROCESS_ZH.md  START_TESTING.md  STRATEGY_COMPLETION_FIRST_ZH.md  STRATEGY_GABAGOOL_GRID_ZH.md  STRATEGY_GLFT_MM_ZH.md  STRATEGY_PAIR_ARB_ZH.md  STRATEGY_PAIR_GATED_TRANCHE_V1_1_ZH.md  STRATEGY_PAIR_GATED_TRANCHE_V1_ZH.md  STRATEGY_V2_CORE.md  STRATEGY_V2_CORE_ZH.md  TESTING.md  XUANXUAN008_STRATEGY_DECONSTRUCTION_ZH.md  XUANXUAN008_STRATEGY_V2_ZH.md  (+19 more)
evidence/: analysis_table_0x8dxd.html  analysis_table_0x8dxd_2.html  analysis_table_0x8dxd_3.html  analysis_table_0x8dxd_4.html  analysis_table_gabagool22.html  analysis_table_gabagool22_2.html  analysis_table_gabagool22_3.html  analysis_table_gabagool22_4.html  analysis_table_k9Q2mX4L8A7ZP3R.html  analysis_table_vidarx.html
logs/: polymarket.log.2026-03-06
scripts/: analyze_candid_closure_long_window.py  analyze_candid_closure_positions.py  analyze_grown_cantaloupe_long_window.py  analyze_grown_cantaloupe_positions.py  analyze_late_grammar_long_window.py  analyze_late_grammar_positions.py  analyze_pgt_shadow_events.py  analyze_pgt_shadow_trade_followthrough.py  analyze_quietb27_long_window.py  analyze_quietb27_positions.py  analyze_silent_d189_long_window.py  analyze_silent_d189_positions.py  analyze_xuan_long_window.py  analyze_xuan_positions.py  analyze_xuan_pre_merge_bias.py  analyze_xuan_pre_merge_bias_full.py  analyze_xuan_replay_truth.py  analyze_xuan_taker_buy_participation.py  b_strategy_canary_s8a_native_runtime_wrapper.py  b_strategy_canary_s8a_one_run_orchestrator.py  b_strategy_storage_retention.sh  build_cash_flow_ledger.py  build_local_agg_boundary_dataset.py  build_local_agg_training_dataset.py  build_nagi_ce25_b27bc_own_maker_telemetry_validator_packet.py  build_nagi_ce25_b27bc_residual_failure_audit.py  (+555 more)
(+1358 files in other folders)
