[package]
name = "pm_as_ofi"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
eyre = "0.6.12"
futures = "0.3"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }  # ✅ Enable TLS
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.2"
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
hyper = { version = "1", features = ["http1", "server"] }
dotenv = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"

# Polymarket official SDK (替换自实现的 client)
polymarket-client-sdk = { version = "0.4", default-features = false, features = ["clob", "gamma"] }
rust_decimal = "1.40"
rust_decimal_macros = "1.40"

# Alloy ecosystem
alloy = { version = "1.0.32", features = ["rpc-client", "providers", "transports", "json-rpc", "node-bindings", "signer-local", "signers"] }
alloy-provider = "1.0.32"
alloy-transport-http = "1.0.32"
alloy-transport-ws = "1.0.32"
alloy-contract = "1.0.32"
alloy-primitives = "1.3.1"
alloy-sol-types = "1.3.1"
alloy-signer-local = "1.0.32"
alloy-eips = "1.0.32"

amms-rs = { git = "https://github.com/darkforestry/amms-rs", package = "amms", optional = true }
secrecy = "0.10"

[features]
default = []
backrunner = []
amms = ["dep:amms-rs"]

[[bin]]
name = "polymarket_mm"
path = "src/bin/polymarket_mm.rs"
required-features = ["amms"]

[[bin]]
name = "runner_alloy"
path = "src/bin/runner_alloy.rs"
required-features = ["amms"]

[[bin]]
name = "test_ws"
path = "src/bin/test_ws.rs"

[[bin]]
name = "polymarket_v2"
path = "src/bin/polymarket_v2.rs"
