[package]
name = "pm_as_ofi"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
eyre = "0.6.12"
futures = "0.3"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
url = "2.5.2"
dotenv = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
rand = "0.8"
secrecy = "0.10"

# Polymarket official SDK
polymarket-client-sdk = { version = "0.4", default-features = false, features = ["clob", "gamma", "data", "ctf"] }
rust_decimal = "1.40"
rust_decimal_macros = "1.40"

# Alloy ecosystem (Extreme diet version)
alloy = { version = "1", features = ["providers", "signer-local", "signers", "sol-types", "dyn-abi", "contract"] }

[features]
default = []

[[bin]]
name = "polymarket_v2"
path = "src/bin/polymarket_v2.rs"

[[bin]]
name = "probe_clob_trades"
path = "src/bin/probe_clob_trades.rs"

[[bin]]
name = "probe_clob_v2"
path = "src/bin/probe_clob_v2.rs"
